Rename template file & add two recipes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
     <a href="../index.html">Home</a>
 
     <h1>Grandma's Lasagna</h1>
-    <img src="../img/lasagna.jpeg">
+    <img src="../img/lasagna.jpeg" alt="finished lasagna">
     <h2>Description</h2>
         <p>The Most Amazing Lasagna Recipe is the best recipe for homemade Italian-style lasagna. The balance between layers of cheese, noodles, and homemade bolognese sauce is perfection!</p>
         
