--- a/recipes/sesame-chicken.html
+++ b/recipes/sesame-chicken.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>recipeName</title>
 </head>
 
@@ -13,7 +13,7 @@
     <a href="../index.html">Home</a>
 
     <h1>recipeName</h1>
-    <img src="../img/">
+    <img src="../img/ " alt="">
 
     <h2>Description</h2>
         <p></p>
