--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
+
 <body>
     <h1>The Greatest Sauce of Recipes</h1>
     <h2>Recipe Links</h2>
       <ul>
           <li><a href="./recipes/lasagna.html">Grandma's Lasagna</a></li>
+          <li><a href="./recipes/sesame-chicken.html">Sesame Chicken</a></li>
+          <li><a href="./recipes/stone-bowl.html">Stone Bowl</a></li>
       </ul>
 </body>
 </html>
