--- a/recipes/template.html
+++ b/recipes/template.html
@@ -18,15 +18,14 @@
     <h2>Description</h2>
         <p></p>
 
-    <h3>Ingredients</h3>
-        <ul>
+        <h3>Ingredients</h3>
+            <ul></ul>
 
-        </ul>
+        <h3>Steps</h3>
+            <ol></ol>
 
-    <h3>Steps</h3>
-        <ol>
-            
-        </ol>
-    
+    <h2>Source:</h2>
+    <a href="">Recipe Source</a>
+
 </body>
 </html>
