Add ID to headers & link to top

--- a/recipes/sesame-chicken.html
+++ b/recipes/sesame-chicken.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sesame Chicken</title>
+    <title id="header">Sesame Chicken</title>
 </head>
 
 <body>
@@ -65,7 +65,7 @@
                 </ol>
     <h2>Source:</h2>
     <a href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
-    
+    <a href="#header">Back to top</a>
     
 </body>
 </html>
