--- a/recipes/stone-bowl.html
+++ b/recipes/stone-bowl.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Stone Bowl</title>
+    <title id="header">Stone Bowl</title>
 </head>
 
 <body>
@@ -44,6 +44,6 @@
 
     <h2>Source:</h2>
     <a href="https://iamafoodblog.com/stone-bowl-recipe/">Recipe Source</a>
-
+    <a href="#header">Back to top</a>
 </body>
 </html>
