--- a/recipes/template.html
+++ b/recipes/template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>recipeName</title>
+    <title id="header">recipeName</title>
 </head>
 
 <body>
@@ -26,6 +26,6 @@
 
     <h2>Source:</h2>
     <a href="">Recipe Source</a>
-
+    <a href="#header">Back to top</a>
 </body>
 </html>
