--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="header">Grandma's Lasagna</title>
+    <title>Grandma's Lasagna</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>Grandma's Lasagna</h1>
+    <h1 id="header">Grandma's Lasagna</h1>
     <img src="../img/lasagna.jpeg" alt="finished lasagna">
     <h2>Description</h2>
         <p>The Most Amazing Lasagna Recipe is the best recipe for homemade Italian-style lasagna. The balance between layers of cheese, noodles, and homemade bolognese sauce is perfection!</p>
@@ -51,7 +51,7 @@
             <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes to allow cheese to brown. Serve hot.</li>
         </ol>
     <h2>Source:</h2>
-    <a href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
-    <a href="#header">Back to top</a>
+        <a href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
+        <br><a href="#header">Back to top</a>
 </body>
 </html>
