--- a/recipes/sesame-chicken.html
+++ b/recipes/sesame-chicken.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title id="header">Sesame Chicken</title>
+    <title>Sesame Chicken</title>
 </head>
 
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>Sesame Chicken</h1>
+    <h1 id="header">Sesame Chicken</h1>
     <img src="../img/sesame-chicken.jpeg" alt="finished sesame chicken">
 
     <h2>Description</h2>
@@ -65,7 +65,7 @@
                 </ol>
     <h2>Source:</h2>
     <a href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
-    <a href="#header">Back to top</a>
+    <br><a href="#header">Back to top</a>
     
 </body>
 </html>
