--- a/recipes/template.html
+++ b/recipes/template.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title id="header">recipeName</title>
+    <title>recipeName</title>
 </head>
 
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>recipeName</h1>
+    <h1 id="header">recipeName</h1>
     <img src="../img/ " alt="">
 
     <h2>Description</h2>
@@ -26,6 +26,6 @@
 
     <h2>Source:</h2>
     <a href="">Recipe Source</a>
-    <a href="#header">Back to top</a>
+    <br><a href="#header">Back to top</a>
 </body>
 </html>
