--- a/recipes/stone-bowl.html
+++ b/recipes/stone-bowl.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title id="header">Stone Bowl</title>
+    <title>Stone Bowl</title>
 </head>
 
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>Stone Bowl</h1>
+    <h1 id="header">Stone Bowl</h1>
     <img src="../img/stone-bowl.jpeg" alt="finished stone bowl">
 
     <h2>Description</h2>
@@ -44,6 +44,6 @@
 
     <h2>Source:</h2>
     <a href="https://iamafoodblog.com/stone-bowl-recipe/">Recipe Source</a>
-    <a href="#header">Back to top</a>
+    <br><a href="#header">Back to top</a>
 </body>
 </html>
