--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"
     <title>Odin Recipes</title>
 </head>
 
 <body>
-    <h1>The Greatest Sauce of Recipes</h1>
+    <div id="main-outer">
+        <div id="main-inner">
+            <h1>The Greatest Sauce of Recipes</h1>
+            <img src="/img/food-king.jpg">
+        </div>
+    </div>
+
     <h2>Recipe Links</h2>
-      <ul>
-          <li><a href="./recipes/lasagna.html">Grandma's Lasagna</a></li>
-          <li><a href="./recipes/sesame-chicken.html">Sesame Chicken</a></li>
-          <li><a href="./recipes/stone-bowl.html">Stone Bowl</a></li>
-      </ul>
+        <ul id="button">
+            <li class="foodImg, lasagna"><a href="./recipes/lasagna.html">Grandma's Lasagna</a></li>
+            <li class="foodImg, sesame"><a href="./recipes/sesame-chicken.html">Sesame Chicken</a></li>
+            <li class="foodImg, stone"><a href="./recipes/stone-bowl.html">Stone Bowl</a></li>
+        </ul>
 </body>
 </html>
