Fixed main image link in index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="main-outer">
         <div id="main-inner">
             <h1>The Greatest Sauce of Recipes</h1>
-            <img src="/img/food-king.jpg">
+            <img src="./img/food-king.jpg">
         </div>
     </div>
 
