--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Odin Recipes</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"
-    <title>Odin Recipes</title>
 </head>
-
 <body>
-    <div id="main-outer">
-        <div id="main-inner">
+    <div id="main-inner" class="head">
+        <div>
+            <img src="./img/food-king.jpg" alt="large man with lots of food">
             <h1>The Greatest Sauce of Recipes</h1>
-            <img src="./img/food-king.jpg">
+            <img src="./img/food-king.jpg" alt="large man with lots of food">
         </div>
     </div>
 
-    <h2>Recipe Links</h2>
+    <h2 class="recipe-links">Recipe Links</h2>
         <ul id="button">
             <li class="foodImg, lasagna"><a href="./recipes/lasagna.html">Grandma's Lasagna</a></li>
             <li class="foodImg, sesame"><a href="./recipes/sesame-chicken.html">Sesame Chicken</a></li>
