--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/styles.css"
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,49 +10,60 @@
 <body>
     <a href="../index.html">Home</a>
 
-    <h1 id="header">Grandma's Lasagna</h1>
-    <img src="../img/lasagna.jpeg" alt="finished lasagna">
-    <h2>Description</h2>
-        <p>The Most Amazing Lasagna Recipe is the best recipe for homemade Italian-style lasagna. The balance between layers of cheese, noodles, and homemade bolognese sauce is perfection!</p>
-        
-        <p>Homemade lasagna is the best. It tastes nothing like the ones from the frozen food aisle. This recipe is so good—it makes the kind of lasagna people write home about! It brings together all of the things we love in a good pasta dish: noodles, cheeses, fresh herbs and a delicious meat sauce.</p>
-    <h3>Ingredients</h3>
-        <ul>
-            <li>1 pound sweet Italian sausage</li>
-            <li>1 pound lean ground beef</li>
-            <li>1 large white onion diced</li>
-            <li>5 cloves garlic minced</li>
-            <li>1 (28 ounce) can crushed tomatoes</li>
-            <li>2 (6 ounce) cans tomato paste</li>
-            <li>1 (15 ounce) can tomato sauce</li>
-            <li>1/2 cup white wine</li>
-            <li>2 tablespoons white sugar</li>
-            <li>1/2 cup chopped fresh basil</li>
-            <li>1 teaspoon fennel seeds</li>
-            <li>1 teaspoon ground oregano</li>
-            <li>1/2 teaspoon salt</li>
-            <li>1/4 teaspoon ground black pepper</li>
-            <li>1/4 cup chopped fresh parsley</li>
-            <li>1 pound lasagna noodles</li>
-            <li>30 ounces ricotta cheese</li>
-            <li>2 tablespoons chopped fresh parsley</li>
-            <li>1 large egg</li>
-            <li>1/2 teaspoon salt</li>
-            <li>1/8 teaspoon ground nutmeg</li>
-            <li>1 pound thinly sliced mozzarella cheese about 24 slices</li>
-            <li>1 cup freshly grated Parmesan cheese</li>
-        </ul>
-    <h3>Steps</h3>
-        <ol>
-            <li>In a large pot over medium heat, add in ground sausage and ground beef. Use a spoon to break up the meat into small pieces. Add in onion and garlic and cook until meat is well browned, stirring constantly. Stir in sugar, fresh basil, fennel, oregano, 1/2 teaspoon salt, pepper, and 1/4 cup chopped parsley. Pour in crushed tomatoes, tomato paste, tomato sauce, and wine*. Stir well and bring to a simmer. Reduce heat to low and simmer 1-4 hours, stirring occasionally.</li>
-            <li>Meanwhile, place lasagna noodles into the bottom of a pan. Pour hot tap water directly over the noodles, making sure the pasta is completely immersed in the water. Let them soak for 30 minutes, then drain and discard water.</li>
-            <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, 1/2 teaspoon salt, and nutmeg. Refrigerate until ready to assemble lasagna.</li>
-            <li>Preheat oven to 375 degrees. Lightly grease a deep 9x13 pan.</li>
-            <li>To assemble, spread about 1 cup of meat sauce in the bottom of the prepared pan. Place 4 noodles on top. Spread with 1/3 of the ricotta cheese mixture. Top with 1/4 of mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, then sprinkle with 1/4 cup parmesan cheese. Repeat layering two more times to create three complete layers. To finish, place a final layer of pasta, topped with another 1 cup of meat sauce to cover the pasta. Top with remaining mozzarella and Parmesan cheese. Cover loosely with aluminum foil.</li>
-            <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes to allow cheese to brown. Serve hot.</li>
-        </ol>
+    <div id="recipe-outer"> 
+            <h1 id="header">Grandma's Lasagna</h1>
+            <img src="../img/lasagna.jpeg" alt="finished lasagna">
+    </div>
+        <h2 class="description">Description</h2>
+        <div id="recipe-inner">
+                <p>The Most Amazing Lasagna Recipe is the best recipe for homemade Italian-style lasagna. The balance between layers of cheese, noodles, and homemade bolognese sauce is perfection!</p>
+                <p>Homemade lasagna is the best. It tastes nothing like the ones from the frozen food aisle. This recipe is so good—it makes the kind of lasagna people write home about! It brings together all of the things we love in a good pasta dish: noodles, cheeses, fresh herbs and a delicious meat sauce.</p>
+        </div>
+   
+        <div id="ingredients-wrapper">
+            <h3>Ingredients</h3>
+            <div id="ingredients-inner-wrapper">
+                    <ul class="ingredients">
+                        <li>1 pound sweet Italian sausage</li>
+                        <li>1 pound lean ground beef</li>
+                        <li>1 large white onion diced</li>
+                        <li>5 cloves garlic minced</li>
+                        <li>1 (28 ounce) can crushed tomatoes</li>
+                        <li>2 (6 ounce) cans tomato paste</li>
+                        <li>1 (15 ounce) can tomato sauce</li>
+                        <li>1/2 cup white wine</li>
+                        <li>2 tablespoons white sugar</li>
+                        <li>1/2 cup chopped fresh basil</li>
+                        <li>1 teaspoon fennel seeds</li>
+                        <li>1 teaspoon ground oregano</li>
+                        <li>1/2 teaspoon salt</li>
+                        <li>1/4 teaspoon ground black pepper</li>
+                        <li>1/4 cup chopped fresh parsley</li>
+                        <li>1 pound lasagna noodles</li>
+                        <li>30 ounces ricotta cheese</li>
+                        <li>2 tablespoons chopped fresh parsley</li>
+                        <li>1 large egg</li>
+                        <li>1/2 teaspoon salt</li>
+                        <li>1/8 teaspoon ground nutmeg</li>
+                        <li>1 pound thinly sliced mozzarella cheese about 24 slices</li>
+                        <li>1 cup freshly grated Parmesan cheese</li>
+                    </ul>
+            </div>
+        </div>
+        <h3>Steps</h3>
+            <div id="steps-wrapper">
+                <ol>
+                    <li>In a large pot over medium heat, add in ground sausage and ground beef. Use a spoon to break up the meat into small pieces. Add in onion and garlic and cook until meat is well browned, stirring constantly. Stir in sugar, fresh basil, fennel, oregano, 1/2 teaspoon salt, pepper, and 1/4 cup chopped parsley. Pour in crushed tomatoes, tomato paste, tomato sauce, and wine*. Stir well and bring to a simmer. Reduce heat to low and simmer 1-4 hours, stirring occasionally.</li>
+                    <li>Meanwhile, place lasagna noodles into the bottom of a pan. Pour hot tap water directly over the noodles, making sure the pasta is completely immersed in the water. Let them soak for 30 minutes, then drain and discard water.</li>
+                    <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, 1/2 teaspoon salt, and nutmeg. Refrigerate until ready to assemble lasagna.</li>
+                    <li>Preheat oven to 375 degrees. Lightly grease a deep 9x13 pan.</li>
+                    <li>To assemble, spread about 1 cup of meat sauce in the bottom of the prepared pan. Place 4 noodles on top. Spread with 1/3 of the ricotta cheese mixture. Top with 1/4 of mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, then sprinkle with 1/4 cup parmesan cheese. Repeat layering two more times to create three complete layers. To finish, place a final layer of pasta, topped with another 1 cup of meat sauce to cover the pasta. Top with remaining mozzarella and Parmesan cheese. Cover loosely with aluminum foil.</li>
+                    <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes to allow cheese to brown. Serve hot.</li>
+                </ol>
+            </div>
+    </div>
     <h2>Source:</h2>
-        <a href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
+        <a class="button" href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
         <br><a href="#header">Back to top</a>
 </body>
 </html>
