Finish styles for recipes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,10 +8,10 @@
     <title>Grandma's Lasagna</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html" id="header">Home</a>
 
     <div id="recipe-outer"> 
-            <h1 id="header">Grandma's Lasagna</h1>
+            <h1>Grandma's Lasagna</h1>
             <img src="../img/lasagna.jpeg" alt="finished lasagna">
     </div>
         <h2 class="description">Description</h2>
@@ -63,7 +63,7 @@
             </div>
     </div>
     <h2>Source:</h2>
-        <a class="button" href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
-        <br><a href="#header">Back to top</a>
+        <a class="button" href="https://www.modernhoney.com/sesame-chicken/" target="_blank">Recipe Source</a>
+        <a class="button" href="#header">Back to top</a>
 </body>
 </html>
