Complete styles & finalize current CSS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Odin Recipes</title>
+    <title>Ent's Recipes</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
 
     <h2 class="recipe-links">Recipe Links</h2>
         <ul id="button">
-            <li class="foodImg, lasagna"><a href="./recipes/lasagna.html">Grandma's Lasagna</a></li>
+            <li class="foodImg, lasagna"><a href="./recipes/lasagna.html">Best Lasagna</a></li>
             <li class="foodImg, sesame"><a href="./recipes/sesame-chicken.html">Sesame Chicken</a></li>
             <li class="foodImg, stone"><a href="./recipes/stone-bowl.html">Stone Bowl</a></li>
         </ul>
