--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grandma's Lasagna</title>
+    <title>Best Lasagna</title>
 </head>
+
 <body>
     <a href="../index.html" id="header">Home</a>
 
     <div id="recipe-outer"> 
-            <h1>Grandma's Lasagna</h1>
+            <h1>Best Lasagna</h1>
             <img src="../img/lasagna.jpeg" alt="finished lasagna">
     </div>
         <h2 class="description">Description</h2>
         <div id="recipe-inner">
-                <p>The Most Amazing Lasagna Recipe is the best recipe for homemade Italian-style lasagna. The balance between layers of cheese, noodles, and homemade bolognese sauce is perfection!</p>
-                <p>Homemade lasagna is the best. It tastes nothing like the ones from the frozen food aisle. This recipe is so good—it makes the kind of lasagna people write home about! It brings together all of the things we love in a good pasta dish: noodles, cheeses, fresh herbs and a delicious meat sauce.</p>
+            <p>The Most Amazing Lasagna Recipe is the best recipe for homemade Italian-style lasagna. The balance between layers of cheese, noodles, and homemade bolognese sauce is perfection!</p>
+            <p>Homemade lasagna is the best. It tastes nothing like the ones from the frozen food aisle. This recipe is so good—it makes the kind of lasagna people write home about! It brings together all of the things we love in a good pasta dish: noodles, cheeses, fresh herbs and a delicious meat sauce.</p>
         </div>
    
         <div id="ingredients-wrapper">
@@ -50,6 +51,7 @@
                     </ul>
             </div>
         </div>
+
         <h3>Steps</h3>
             <div id="steps-wrapper">
                 <ol>
@@ -61,7 +63,6 @@
                     <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes to allow cheese to brown. Serve hot.</li>
                 </ol>
             </div>
-    </div>
     <h2>Source:</h2>
         <a class="button" href="https://www.modernhoney.com/sesame-chicken/" target="_blank">Recipe Source</a>
         <a class="button" href="#header">Back to top</a>
