--- a/recipes/sesame-chicken.html
+++ b/recipes/sesame-chicken.html
@@ -2,70 +2,75 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="/styles.css"
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Sesame Chicken</title>
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html" id="header" >Home</a>
+    <br>
+    <div id="recipe-outer">
+        <h1>Sesame Chicken</h1>
+        <img src="../img/sesame-chicken.jpeg" alt="finished sesame chicken">
+    </div>
+        <h2 class="description">Description</h2>
+        <div id="recipe-inner">
+            <p>Homemade Chinese Sesame Chicken made with crispy fried chicken covered in a sweet and sour sauce. The ultimate sesame chicken recipe is way better than take-out.</p>
+            <p>This Chinese Sesame Chicken is made with boneless skinless chicken breast, cut into bite-size pieces, dredged, and then fried until golden and crispy. The sweet and sour sauce is divine! It is a little spicy and a whole lotta sweet. It is made with honey, brown sugar, rice vinegar, garlic, soy sauce, ketchup, ginger, and red chili flakes. It is heavenly!</p>
+        </div>
 
-    <h1 id="header">Sesame Chicken</h1>
-    <img src="../img/sesame-chicken.jpeg" alt="finished sesame chicken">
-
-    <h2>Description</h2>
-        <p>Homemade Chinese Sesame Chicken made with crispy fried chicken covered in a sweet and sour sauce. The ultimate sesame chicken recipe is way better than take-out.</p>
-        <p>This Chinese Sesame Chicken is made with boneless skinless chicken breast, cut into bite-size pieces, dredged, and then fried until golden and crispy. The sweet and sour sauce is divine! It is a little spicy and a whole lotta sweet. It is made with honey, brown sugar, rice vinegar, garlic, soy sauce, ketchup, ginger, and red chili flakes. It is heavenly!</p>
-
-        <h3>Ingredients</h3>
-            <ul>
-                <li>4 Boneless Skinless Chicken Breasts (cut into bite-size pieces)</li>
-                <li>3 large Eggs</li>
-                <li>1/3 cup Flour</li>
-                <li>1/3 cup Cornstarch</li>
-                <li>Salt</li>
-                <li>Oil (for frying)</li>
-            </ul>
-
-            <h4>Sesame Sauce:</h4>
-                <ul>
-                    <li>1/2 cup Honey</li>
-                    <li>3 Tablespoons Rice Vinegar</li>
-                    <li>2 Tablespoons Dark Brown Sugar (or golden brown sugar)</li>
-                    <li>1/4 cup Soy Sauce</li>
-                    <li>1/4 cup Ketchup</li>
-                    <li>1/2 to 1 teaspoon Red Chili Flakes</li>
-                    <li>1/4 teaspoon Garlic Powder</li>
-                    <li>1/4 teaspoon Ginger Powder</li>
-                    <li>2 teaspoons Cornstarch</li>
-                </ul>
-
-            <h4>Garnish</h4>
-                <ul>
-                    <li>3 Tablespoons Sesame Seeds</li>
-                    <li>Green Onions (green parts sliced)</li>
-                    <li>Rice</li>
-                </ul>
+        <div id="ingredients-wrapper">
+            <h3>Ingredients</h3>
+                <div id="ingredients-inner-wrapper">
+                    <ul>
+                        <li>4 Boneless Skinless Chicken Breasts (cut into bite-size pieces)</li>
+                        <li>3 large Eggs</li>
+                        <li>1/3 cup Flour</li>
+                        <li>1/3 cup Cornstarch</li>
+                        <li>Salt</li>
+                        <li>Oil (for frying)</li>
+                    </ul>
+                    <h4>Sesame Sauce:</h4>
+                        <ul>
+                            <li>1/2 cup Honey</li>
+                            <li>3 Tablespoons Rice Vinegar</li>
+                            <li>2 Tablespoons Dark Brown Sugar (or golden brown sugar)</li>
+                            <li>1/4 cup Soy Sauce</li>
+                            <li>1/4 cup Ketchup</li>
+                            <li>1/2 to 1 teaspoon Red Chili Flakes</li>
+                            <li>1/4 teaspoon Garlic Powder</li>
+                            <li>1/4 teaspoon Ginger Powder</li>
+                            <li>2 teaspoons Cornstarch</li>
+                        </ul>
+                    <h4>Garnish</h4>
+                        <ul>
+                            <li>3 Tablespoons Sesame Seeds</li>
+                            <li>Green Onions (green parts sliced)</li>
+                            <li>Rice</li>
+                        </ul>
+                </div>
+        </div>
 
         <h3>Steps</h3>
-            <h4>To make Chicken</h4>
-                <ol>
-                    <li>Place flour and cornstarch in a shallow dish or pie plate. Add a hefty pinch of salt. Stir.</li>
-                    <li>Whisk eggs in a shallow dish.Dip chicken pieces in the egg mixture and then flour mixture. Place on the plate.</li>
-                    <li>Heat 2 -3 inches of oil in a heavy-bottomed pot over medium-high heat. Using a thermometer, watch for it to reach 350 degrees. Working in batches, cook several chicken pieces at a time. Cook for 2 - 3 minutes, turning often until golden brown. *May need longer depending on temperature of the oil.</li>
-                    <li>Place chicken on a paper-towel-lined plate. Repeat.</li>
-                </ol>
-
-            <h4>Sesame Sweet and Sour Sauce</h4>
-                <ol>
-                    <li>In a medium pot, add honey, vinegar, brown sugar, soy sauce, ketchup, ginger, garlic, and red chili flakes. Heat for 3 minutes. In a small bowl, whisk cornstarch with 1 Tablespoon of water to form a paste. Add to sesame sauce and whisk together. Continue to cook for 5 minutes, until the mixture begins to thicken. Once the sauce is thickened, remove from heat and toss with fried chicken.</li>
-                    <li>You may reserve some of the sauce to place on rice. Serve it with sesame seeds and a sprinkling of green onions.</li>
-                </ol>
+            <div id="steps-wrapper">
+                <h4>To make Chicken</h4>
+                    <ol>
+                        <li>Place flour and cornstarch in a shallow dish or pie plate. Add a hefty pinch of salt. Stir.</li>
+                        <li>Whisk eggs in a shallow dish.Dip chicken pieces in the egg mixture and then flour mixture. Place on the plate.</li>
+                        <li>Heat 2 -3 inches of oil in a heavy-bottomed pot over medium-high heat. Using a thermometer, watch for it to reach 350 degrees. Working in batches, cook several chicken pieces at a time. Cook for 2 - 3 minutes, turning often until golden brown. *May need longer depending on temperature of the oil.</li>
+                        <li>Place chicken on a paper-towel-lined plate. Repeat.</li>
+                    </ol>
+                <h4>Sesame Sweet and Sour Sauce</h4>
+                    <ol>
+                        <li>In a medium pot, add honey, vinegar, brown sugar, soy sauce, ketchup, ginger, garlic, and red chili flakes. Heat for 3 minutes. In a small bowl, whisk cornstarch with 1 Tablespoon of water to form a paste. Add to sesame sauce and whisk together. Continue to cook for 5 minutes, until the mixture begins to thicken. Once the sauce is thickened, remove from heat and toss with fried chicken.</li>
+                        <li>You may reserve some of the sauce to place on rice. Serve it with sesame seeds and a sprinkling of green onions.</li>
+                    </ol>
+            </div>
     <h2>Source:</h2>
-    <a href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
-    <br><a href="#header">Back to top</a>
-    
+        <a class="button" href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
+        <a class="button" href="#header">Back to top</a>
 </body>
 </html>
