--- a/recipes/stone-bowl.html
+++ b/recipes/stone-bowl.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="/styles.css"
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,40 +11,49 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html" id="header">Home</a>
+    <br>
+    <div id="recipe-outer">
+        <h1>Stone Bowl</h1>
+        <img src="../img/stone-bowl.jpeg" alt="finished stone bowl">
+    </div>
+        <h2 class="description">Description</h2>
+            <div id="recipe-inner">
+                <p>When something crunchy is next to something soft, or smooth, the crunchiness is just so much more…crunchy. <strong>Dolsot bibimbap</strong> is one of the dishes that does an excellent job of pairing the crunchy with the not-so-crunchy.</p>
+                <p>Dolsot bibimbap is one of my favourite Korean dishes. Bibimbap literally means mixed rice. It’s usually served in a bowl: steamed rice on the bottom, with vegetables and meat on top. Sometimes a fried egg is in thrown in too. Spicy red sauce is drizzled on top to taste and the whole thing is mixed up before eating.</p>
+            </div>
 
-    <h1 id="header">Stone Bowl</h1>
-    <img src="../img/stone-bowl.jpeg" alt="finished stone bowl">
-
-    <h2>Description</h2>
-        <p>When something crunchy is next to something soft, or smooth, the crunchiness is just so much more…crunchy. <strong>Dolsot bibimbap</strong> is one of the dishes that does an excellent job of pairing the crunchy with the not-so-crunchy.</p>
-        <p>Dolsot bibimbap is one of my favourite Korean dishes. Bibimbap literally means mixed rice. It’s usually served in a bowl: steamed rice on the bottom, with vegetables and meat on top. Sometimes a fried egg is in thrown in too. Spicy red sauce is drizzled on top to taste and the whole thing is mixed up before eating.</p>
-
-        <h3>Ingredients</h3>
-            <ul>
-                <li>2 teaspoons sesame oil</li>
-                <li>2 cups cooked short grain rice, hot</li>
-                <li>1/3 cup pulled pork, warmed</li>
-                <li>1/3 cup julienned carrots</li>
-                <li>1/3 cup thinly sliced cucumbers</li>
-                <li>1/3 cup puréed kimchi</li>
-                <li>1 egg</li>
-            </ul>
+        <div id="ingredients-wrapper">
+            <h3>Ingredients</h3>
+                <div id="ingredients-inner-wrapper">
+                    <ul>
+                        <li>2 teaspoons sesame oil</li>
+                        <li>2 cups cooked short grain rice, hot</li>
+                        <li>1/3 cup pulled pork, warmed</li>
+                        <li>1/3 cup julienned carrots</li>
+                        <li>1/3 cup thinly sliced cucumbers</li>
+                        <li>1/3 cup puréed kimchi</li>
+                        <li>1 egg</li>
+                    </ul>
+                </div>
+        </div>
 
         <h3>Steps</h3>
-            <ol>
-                <li>Heat your stone bowl over medium-low heat. When it is hot, add the sesame oil to the bowl.</li>
-                <li>Put the rice on the bottom and layer the rest of the ingredients on top.</li>
-                <li>Keep heating the bowl until you hear a distinct sizzling sound.</li>
-                <li>Carefully remove from the heat. Mix together your ingredients and push them against the sides of the bowl. The hot bowl will crisp your rice. The longer you wait, the crispier your rice will get!</li>
-            </ol>
-        <h4>Tips:</h4>
-        <li>You can find stone bowls at most Korean grocery stores. You’ll have to season your bowl before you can use it.</li>
-        <li><strong>To season: </strong>rub the bowl with salt and rinse. Fill the bowl halfway with water and set it on your stove top on medium heat. Let the bowl heat up and come to a boil. While the water is boiling, heat the oven to 350 F. Continue to boil until the water has evaporated. The bowl will be very hot.Paint the inside of the bowl with a small amount of sesame oil and place in the oven for 30 minutes.</li>
-        <p><em>If you don’t have a stone bowl, try this recipe in a cast iron pan with high sides and you’ll get the same crispy rice results.</em></p>
-
+            <div id="steps-wrapper">
+                <ol>
+                    <li>Heat your stone bowl over medium-low heat. When it is hot, add the sesame oil to the bowl.</li>
+                    <li>Put the rice on the bottom and layer the rest of the ingredients on top.</li>
+                    <li>Keep heating the bowl until you hear a distinct sizzling sound.</li>
+                    <li>Carefully remove from the heat. Mix together your ingredients and push them against the sides of the bowl. The hot bowl will crisp your rice. The longer you wait, the crispier your rice will get!</li>
+                </ol>
+            
+                <h4>Tips:</h4>
+                <li>You can find stone bowls at most Korean grocery stores. You’ll have to season your bowl before you can use it.</li>
+                <li><strong>To season: </strong>rub the bowl with salt and rinse. Fill the bowl halfway with water and set it on your stove top on medium heat. Let the bowl heat up and come to a boil. While the water is boiling, heat the oven to 350 F. Continue to boil until the water has evaporated. The bowl will be very hot.Paint the inside of the bowl with a small amount of sesame oil and place in the oven for 30 minutes.</li>
+                <p><em>If you don’t have a stone bowl, try this recipe in a cast iron pan with high sides and you’ll get the same crispy rice results.</em></p>
+             </div>
     <h2>Source:</h2>
-    <a href="https://iamafoodblog.com/stone-bowl-recipe/">Recipe Source</a>
-    <br><a href="#header">Back to top</a>
+    <a class="button" href="https://iamafoodblog.com/stone-bowl-recipe/">Recipe Source</a>
+    <a class="button" href="#header">Back to top</a>
 </body>
 </html>
