Add no follow to recipe source buttons

--- a/recipes/sesame-chicken.html
+++ b/recipes/sesame-chicken.html
@@ -70,7 +70,7 @@
                     </ol>
             </div>
     <h2>Source:</h2>
-        <a class="button" href="https://www.modernhoney.com/sesame-chicken/">Recipe Source</a>
+        <a class="button" href="https://www.modernhoney.com/sesame-chicken/" target="_blank">Recipe Source</a>
         <a class="button" href="#header">Back to top</a>
 </body>
 </html>
