--- a/recipes/stone-bowl.html
+++ b/recipes/stone-bowl.html
@@ -53,7 +53,7 @@
                 <p><em>If you don’t have a stone bowl, try this recipe in a cast iron pan with high sides and you’ll get the same crispy rice results.</em></p>
              </div>
     <h2>Source:</h2>
-    <a class="button" href="https://iamafoodblog.com/stone-bowl-recipe/">Recipe Source</a>
+    <a class="button" href="https://iamafoodblog.com/stone-bowl-recipe/" target="_blank">Recipe Source</a>
     <a class="button" href="#header">Back to top</a>
 </body>
 </html>
