--- a/recipes/template.html
+++ b/recipes/template.html
@@ -38,7 +38,7 @@
                 </ol>
             </div>
     <h2>Source:</h2>
-    <a class="button" href="#">Recipe Source</a>
+    <a class="button" href="#" target="_blank">Recipe Source</a>
     <a class="button" href="#header">Back to top</a>
 </body>
 </html>
